envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901

static_resources:
  clusters:
    - name: xds_cluster
      connect_timeout: 0.25s
      type: STATIC
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9999
  listeners:
    - name: http
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8089
      filter_chains:
        - filters:
            - name: http
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: config_test
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.on_demand
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.on_demand.v3.OnDemand
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - name: t1
                          match: { prefix: "/t1" }
                          route:
                            cluster_header: "Cluster-name"
                          typed_per_filter_config:
                            envoy.filters.http.on_demand:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.on_demand.v3.PerRouteConfig
                              odcds:
                                source:
                                  resource_api_version: V3
                                  api_config_source:
                                    api_type: DELTA_GRPC
                                    transport_api_version: V3
                                    grpc_services:
                                      envoy_grpc:
                                        cluster_name: xds_cluster

                        - name: default
                          match: { prefix: "/" }
                          route:
                            cluster_header: "Cluster-Name"
                          typed_per_filter_config:
                            envoy.filters.http.on_demand:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.on_demand.v3.PerRouteConfig
                              odcds:
                                source:
                                  resource_api_version: V3
                                  api_config_source:
                                    api_type: DELTA_GRPC
                                    transport_api_version: V3
                                    grpc_services:
                                      envoy_grpc:
                                        cluster_name: xds_cluster

node:
  id: "id_01"
  cluster: "cluster_01"
